# lan-extended-display

./: .gitignore  CMakeLists.txt  NOTICE  README.md  lan-extended-display-implementation-plan.md
common/: CMakeLists.txt
common/include/led/common/: logger.h  status.h
common/include/led/protocol/: control_messages.h  messages.h
common/include/led/session/: session_state.h
common/include/led/transport/: h264_annex_b.h  h264_rtp_depacketizer.h  h264_rtp_packetizer.h  mjpeg_packet.h  rtp_codec.h  tcp_socket.h  udp_socket.h
common/src/: control_messages.cpp  h264_annex_b.cpp  h264_rtp_depacketizer.cpp  h264_rtp_packetizer.cpp  logger.cpp  messages.cpp  mjpeg_packet.cpp  rtp_codec.cpp  session_state.cpp  tcp_socket.cpp  udp_socket.cpp
docs/: development-checklist.md  gui-and-autostart.md
linux-client/: CMakeLists.txt
linux-client/client-core/include/led/client/: decoder.h  discovery.h  input_capture.h  input_sender.h  renderer.h  session_client.h  signaling_client.h  video_receiver.h  x11_input_capture.h
linux-client/client-core/src/: decoder.cpp  discovery.cpp  input_capture.cpp  input_sender.cpp  renderer.cpp  session_client.cpp  signaling_client.cpp  video_receiver.cpp  x11_input_capture.cpp
linux-client/client-ui/: client_app.cpp
linux-client/scripts/: install-user-autostart.sh  install-web-desktop-service.sh  start-web-desktop.sh  uninstall-user-autostart.sh  uninstall-web-desktop-service.sh
linux-client/tray/: led_client_tray.py  led_web_control_tray.py
tools/state-smoke/: CMakeLists.txt  annex_b_smoke.cpp  rtp_packetizer_smoke.cpp  state_smoke.cpp  tcp_signaling_loopback_smoke.cpp  udp_rtp_loopback_smoke.cpp
windows-host/: CMakeLists.txt
windows-host/driver/idd-virtual-display/: CMakeLists.txt  README.md  led_idd.inf.in
windows-host/driver/idd-virtual-display/scripts/: build-sign-package.ps1  install-driver.ps1  remove-virtual-display.ps1  uninstall-driver.ps1
windows-host/driver/idd-virtual-display/src/: driver.cpp
windows-host/host-core/include/led/host/: capture_engine.h  cursor_suppressor.h  display_manager.h  encoder.h  input_injector.h  input_receiver.h  jpeg_encoder.h  session_manager.h  signaling_server.h  video_sender.h
windows-host/host-core/src/: capture_engine.cpp  cursor_suppressor.cpp  display_manager.cpp  encoder.cpp  input_injector.cpp  input_receiver.cpp  jpeg_encoder.cpp  session_manager.cpp  signaling_server.cpp  video_sender.cpp
windows-host/host-ui/: host_app.cpp  tray_app.cpp
